# Schminput

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
examples/: actionset_disabling.rs  basic.rs  binding_modifications.rs  subaction_paths.rs  xr.rs  xr_actionset_priorities.rs
schminput_rebinding/: Cargo.toml  README.md
schminput_rebinding/examples/: egui_minimal.rs  egui_xr.rs
schminput_rebinding/src/: config.rs  default_bindings.rs  egui.rs  egui_window.rs  lib.rs  persistent_bindings.rs  runtime_rebinding.rs  str_converstions.rs  xr_utils.rs
schminput_rebinding_egui/: Cargo.toml
schminput_rebinding_egui/examples/: minimal.rs  test.rs
schminput_rebinding_egui/src/: default_bindings.rs  egui.rs  egui_window.rs  lib.rs  persistent_bindings.rs  runtime_rebinding.rs
src/: binding_modification.rs  gamepad.rs  impl_helpers.rs  keyboard.rs  keyboard_binding_provider.rs  lib.rs  mouse.rs  mouse_binding_provider.rs  openxr.rs  oxr_binding_provider.rs  prelude.rs  priorities.rs  subaction_paths.rs  xr.rs
src/mouse/: mod.rs  motion.rs  mouse_binding_provider.rs
xr_example/: Cargo.toml
xr_example/src/: main.rs
