[package]
name = "schminput"
license = "MIT OR Apache-2.0"
version = "0.1.0-rc1.1"
edition = "2021"
repository = "https://github.com/Schmarni-Dev/Schminput/"
description = "An Action Based Input Manager for Bevy"
keywords = ["bevy", "input", "vr", "xr", "action"]

[[example]]
name = "xr"
required-features = ["xr"]

[features]
default = ["xr"]
xr = ["dep:bevy_mod_openxr", "dep:bevy_mod_xr", "dep:openxr"]

[dependencies]
bevy.workspace = true
bevy_mod_openxr = { workspace = true, optional = true }
bevy_mod_xr = { workspace = true, optional = true }
openxr = { workspace = true, optional = true }

[workspace.dependencies]
bevy = { version = "0.14", default-features = false }
# bevy_mod_openxr = { version = "0.1.0-rc1" }
# bevy_mod_xr = { version = "0.1.0-rc1" }
bevy_mod_openxr = { git = "https://github.com/awtterpip/bevy_oxr" }
bevy_mod_xr = { git = "https://github.com/awtterpip/bevy_oxr" }
openxr = { version = "0.18", default-features = false }

[dev-dependencies]
bevy_mod_openxr = { workspace = true, default-features = true }
bevy = { workspace = true, default-features = true }
