[package]
name = "schminput"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "An Action Based Input Manager for Bevy"
keywords = ["bevy", "input", "vr", "xr", "action"]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Schmarni-Dev/Schminput/"

[workspace.dependencies]
schminput = { path = ".", version = "0.2.0" }
bevy = { version = "0.15", default-features = false }
bevy_mod_xr = "0.2.0"
bevy_mod_openxr = "0.2.0"
openxr = { version = "0.19", default-features = false }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[[example]]
name = "xr"
required-features = ["xr"]

[features]
default = ["xr"]
xr = ["dep:bevy_mod_openxr", "dep:bevy_mod_xr", "dep:openxr"]

[dependencies]
atomicow = "1.0.0"
bevy.workspace = true
bevy_mod_xr = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
openxr = { workspace = true, optional = true }
bevy_mod_openxr = { workspace = true, optional = true }

[workspace]
members = ["schminput_rebinding"]

[dev-dependencies]
bevy_mod_openxr = { workspace = true, default-features = true }
bevy = { workspace = true, default-features = true }
