[package]
name = "schminput_rebinding"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[[example]]
name = "egui_minimal"
required-features = ["egui"]

[features]
default = ["xr", "egui"]
xr = ["dep:bevy_mod_openxr", "dep:bevy_mod_xr", "dep:openxr", "schminput/xr"]
egui = ["dep:bevy_egui"]

[dependencies]
schminput = { path = ".." }
bevy.workspace = true
bevy_mod_openxr = { workspace = true, optional = true }
bevy_mod_xr = { workspace = true, optional = true }
openxr = { workspace = true, optional = true }
bevy_egui = { version = "0.29.0", default-features = false, optional = true }
toml_edit = { version = "0.22.20", features = ["serde"] }
dirs = "5.0.1"

[dev-dependencies]
bevy_egui = { version = "0.29.0", default-features = true }
bevy = { workspace = true, default-features = true }
