[package]
name = "schminput_rebinding"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[[example]]
name = "egui_minimal"
required-features = ["egui"]
[[example]]
name = "egui_xr"
required-features = ["egui", "xr"]

[features]
default = ["egui"]
xr = ["dep:bevy_mod_xr", "schminput/xr"]
egui = ["dep:bevy_egui"]

[dependencies]
schminput = { path = ".." }
bevy.workspace = true
bevy_mod_xr = { workspace = true, optional = true }
bevy_egui = { version = "0.30.0", default-features = false, optional = true }
toml_edit = { version = "0.22.20", features = ["serde"] }
dirs = "5.0.1"

[dev-dependencies]
bevy_egui = { version = "0.30.0", features = ["render", "default_fonts"], default-features = false}
bevy = { workspace = true, default-features = true }
