[package]
name = "schminput_rebinding"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Input Rebinding for Schminput"
keywords = ["input", "action", "schminput", "rebinding"]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[[example]]
name = "egui_minimal"
required-features = ["egui"]
[[example]]
name = "egui_xr"
required-features = ["egui", "xr"]

[features]
default = []
xr = ["dep:bevy_mod_xr", "schminput/xr"]
egui = ["dep:bevy_egui"]

[dependencies]
schminput.workspace = true
bevy.workspace = true
bevy_mod_xr = { workspace = true, optional = true }
bevy_egui = { version = "0.34.1", default-features = false, optional = true }
toml_edit = { version = "0.22.20", features = ["serde"] }
dirs = "5.0.1"
atomicow = "1.0.0"

[dev-dependencies]
bevy_egui = { version = "0.34.1", features = [
	"render",
	"default_fonts",
], default-features = false }
bevy = { workspace = true, default-features = true }
# can't make this optinal, annoying
bevy_mod_openxr = { workspace = true, optional = false }
