[package]
name = "schminput_rebinding_egui"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[features]
default = ["xr"]
xr = ["dep:bevy_mod_openxr", "dep:bevy_mod_xr", "dep:openxr", "schminput/xr"]

[dependencies]
schminput = { path = ".." }
bevy.workspace = true
bevy_mod_openxr = { workspace = true, optional = true }
bevy_mod_xr = { workspace = true, optional = true }
openxr = { workspace = true, optional = true }
bevy_egui = { version = "0.29.0", default-features = false }
toml_edit = { version = "0.22.20", features = ["serde"] }

[dev-dependencies]
bevy_egui = { version = "0.29.0", default-features = true }
bevy = { workspace = true, default-features = true }
